[package]
name = "leaf-android"
version = "0.1.0"
authors = ["ghost <noreply>"]
edition = "2018"

[lib]
name = "leafandroid"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = [
    "leaf/default-ring"
]

[dependencies]
leaf = { git = "https://github.com/eycorsican/leaf.git", tag="v0.7.1", package = "leaf", default-features = false }
jni = { version = "0.19.0", default-features = false }