[package]
name = "leaf-android"
version = "0.1.0"
authors = ["ghost <noreply>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[lib]
name = "leafandroid"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = [
    "leaf/default-ring"
]

[dependencies]
leaf = { git = "https://github.com/lemos1235/leaf.git", package = "leaf", default-features = false }
jni = { version = "0.19.0", default-features = false }